--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,9 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/",
+      "methods": ["GET", "HEAD", "PUT", "POST", "DELETE"],
+      "headers": { "Access-Control-Allow-Origin": "*" }
     }
   ]
 }
