--- a/vercel.json
+++ b/vercel.json
@@ -9,9 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/",
-      "methods": ["GET", "HEAD", "PUT", "POST", "DELETE"],
-      "headers": { "Access-Control-Allow-Origin": "*" }
+      "dest": "/"
     }
   ]
 }
